--- a/notebooks/eda_analysis.ipynb
+++ b/notebooks/eda_analysis.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "4       0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "9  13.09  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
       "[nltk_data]   Package punkt is already up-to-date!\n",
       "[nltk_data] Downloading package stopwords to\n",
       "[nltk_data]     /Users/betaknight/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
    ],
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "4  XpVt6Z1Gjjo     3       0                                     trending"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
        "4            0.994158  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
        "      <td>5931</td>\n",
        "      <td>46245</td>\n",
        "      <td>https://i.ytimg.com/vi/XpVt6Z1Gjjo/default.jpg</td>\n",
-       "      <td>0.981806</td>\n",
+       "      <td>53.962738</td>\n",
        "      <td>0.288750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -859,7 +859,7 @@
        "      <td>39774</td>\n",
        "      <td>170708</td>\n",
        "      <td>https://i.ytimg.com/vi/cLdxuaxaQwc/default.jpg</td>\n",
-       "      <td>0.935471</td>\n",
+       "      <td>14.496832</td>\n",
        "      <td>0.331665</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -874,7 +874,7 @@
        "      <td>4542</td>\n",
        "      <td>12829</td>\n",
        "      <td>https://i.ytimg.com/vi/WYYvHb03Eog/default.jpg</td>\n",
-       "      <td>0.846123</td>\n",
+       "      <td>5.498679</td>\n",
        "      <td>0.331250</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -889,7 +889,7 @@
        "      <td>568</td>\n",
        "      <td>6666</td>\n",
        "      <td>https://i.ytimg.com/vi/sjlHnJvXdQs/default.jpg</td>\n",
-       "      <td>0.994158</td>\n",
+       "      <td>170.186620</td>\n",
        "      <td>0.352500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -904,7 +904,7 @@
        "      <td>544</td>\n",
        "      <td>3040</td>\n",
        "      <td>https://i.ytimg.com/vi/cMKX2tE5Luk/default.jpg</td>\n",
-       "      <td>0.984480</td>\n",
+       "      <td>63.431985</td>\n",
        "      <td>0.391429</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -941,20 +941,29 @@
        "4       544           3040  https://i.ytimg.com/vi/cMKX2tE5Luk/default.jpg   \n",
        "\n",
        "   like_dislike_ratio  comment_sentiment_ratio  \n",
-       "0            0.981806                 0.288750  \n",
-       "1            0.935471                 0.331665  \n",
-       "2            0.846123                 0.331250  \n",
-       "3            0.994158                 0.352500  \n",
-       "4            0.984480                 0.391429  "
+       "0           53.962738                 0.288750  \n",
+       "1           14.496832                 0.331665  \n",
+       "2            5.498679                 0.331250  \n",
+       "3          170.186620                 0.352500  \n",
+       "4           63.431985                 0.391429  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cv_combined.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TextBlob acts as the baseline or dummy model. It uses predefined word lists to estimate the sentiment of a comment without actually learning patterns from the data. While it can give a rough estimate of positive or negative tone, it does not adapt to the specific language, slang, or context used in YouTube comments. Because of this, it often misses sarcasm, informal expressions, or creative spelling.\n",
+    "\n",
+    "By training a machine learning model on labeled data, a custom classifier can learn patterns that better reflect real viewer sentiment. This allows for more accurate predictions and a stronger foundation for comparing comment tone to engagement metrics."
    ]
   },
   {
@@ -1072,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1113,84 +1122,84 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>350</th>\n",
-       "      <td>3hq2c9vdfls</td>\n",
-       "      <td>Cal Football 2017: HC Justin Wilcox September ...</td>\n",
-       "      <td>Cal Bears</td>\n",
-       "      <td>17</td>\n",
-       "      <td>cal|berkeley|golden bears|bears|california gol...</td>\n",
-       "      <td>1097</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>https://i.ytimg.com/vi/3hq2c9vdfls/default.jpg</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <th>1611</th>\n",
+       "      <td>-zCYX0esYlo</td>\n",
+       "      <td>Everything You Need to Know About The Last Dab...</td>\n",
+       "      <td>First We Feast</td>\n",
+       "      <td>26</td>\n",
+       "      <td>First we feast|fwf|firstwefeast|food|food porn...</td>\n",
+       "      <td>662805</td>\n",
+       "      <td>18403</td>\n",
+       "      <td>214</td>\n",
+       "      <td>2205</td>\n",
+       "      <td>https://i.ytimg.com/vi/-zCYX0esYlo/default.jpg</td>\n",
+       "      <td>0.988505</td>\n",
+       "      <td>0.383333</td>\n",
+       "      <td>0.605172</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1681</th>\n",
-       "      <td>k8LF_FU2luY</td>\n",
-       "      <td>Track Testing Continued</td>\n",
-       "      <td>Bollinger Motors</td>\n",
-       "      <td>2</td>\n",
-       "      <td>truck|track|bollinger motors|b1|electric car|e...</td>\n",
-       "      <td>9711</td>\n",
-       "      <td>35</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>https://i.ytimg.com/vi/k8LF_FU2luY/default.jpg</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <th>307</th>\n",
+       "      <td>IMG0u0_cKNc</td>\n",
+       "      <td>Here's what happens when two hurricanes collide</td>\n",
+       "      <td>Tech Insider</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Tech Insider|TI|Tech|Science|Innovation|Digita...</td>\n",
+       "      <td>151736</td>\n",
+       "      <td>2153</td>\n",
+       "      <td>102</td>\n",
+       "      <td>444</td>\n",
+       "      <td>https://i.ytimg.com/vi/IMG0u0_cKNc/default.jpg</td>\n",
+       "      <td>0.954767</td>\n",
+       "      <td>0.265000</td>\n",
+       "      <td>0.689767</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5022</th>\n",
-       "      <td>c5RsAXsZvI8</td>\n",
-       "      <td>7. Teach the First Behavior: Targeting</td>\n",
-       "      <td>Clicker Learning Institute for Cats and Kittens</td>\n",
-       "      <td>15</td>\n",
-       "      <td>cats|cat|kittens|kitten|pets|pet|animals|anima...</td>\n",
-       "      <td>4962</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>https://i.ytimg.com/vi/c5RsAXsZvI8/default.jpg</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <th>2768</th>\n",
+       "      <td>ILDy6kYU-xQ</td>\n",
+       "      <td>Are you a body with a mind or a mind with a bo...</td>\n",
+       "      <td>TED-Ed</td>\n",
+       "      <td>27</td>\n",
+       "      <td>TED|TED-Ed|TED Education|TED Ed|Maryam Alimard...</td>\n",
+       "      <td>321735</td>\n",
+       "      <td>14367</td>\n",
+       "      <td>322</td>\n",
+       "      <td>1679</td>\n",
+       "      <td>https://i.ytimg.com/vi/ILDy6kYU-xQ/default.jpg</td>\n",
+       "      <td>0.978079</td>\n",
+       "      <td>0.315000</td>\n",
+       "      <td>0.663079</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2641</th>\n",
-       "      <td>mShBE_wHAk8</td>\n",
-       "      <td>TARDIS - First Working Video</td>\n",
-       "      <td>Adam Sifounakis</td>\n",
-       "      <td>22</td>\n",
-       "      <td>[none]</td>\n",
-       "      <td>1341</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>https://i.ytimg.com/vi/mShBE_wHAk8/default.jpg</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <th>2548</th>\n",
+       "      <td>TNhyrPaGFYQ</td>\n",
+       "      <td>FIX YOUR LIFE (YIAY #359)</td>\n",
+       "      <td>jacksfilms</td>\n",
+       "      <td>23</td>\n",
+       "      <td>jacksfilms|yiay|fix|your|life|lives|live|advice</td>\n",
+       "      <td>1595329</td>\n",
+       "      <td>76458</td>\n",
+       "      <td>1718</td>\n",
+       "      <td>52400</td>\n",
+       "      <td>https://i.ytimg.com/vi/TNhyrPaGFYQ/default.jpg</td>\n",
+       "      <td>0.978024</td>\n",
+       "      <td>0.155000</td>\n",
+       "      <td>0.823024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1078</th>\n",
-       "      <td>p7sooI96zPI</td>\n",
-       "      <td>Big Love - Roman Grant Sings Big Rock Candy Mo...</td>\n",
-       "      <td>Geezus66</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Roman|Grant|sings|singing|big|rock|candy|mount...</td>\n",
-       "      <td>12396</td>\n",
-       "      <td>39</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>https://i.ytimg.com/vi/p7sooI96zPI/default.jpg</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <th>7619</th>\n",
+       "      <td>CAQ2wWVlOuc</td>\n",
+       "      <td>Jeff Bezos smashes bottle of champagne while p...</td>\n",
+       "      <td>Tech Insider</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Tech Insider|TI|Tech|Science|Innovation|Digita...</td>\n",
+       "      <td>66230</td>\n",
+       "      <td>661</td>\n",
+       "      <td>153</td>\n",
+       "      <td>203</td>\n",
+       "      <td>https://i.ytimg.com/vi/CAQ2wWVlOuc/default.jpg</td>\n",
+       "      <td>0.812039</td>\n",
+       "      <td>0.288194</td>\n",
+       "      <td>0.523845</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1198,49 +1207,49 @@
       ],
       "text/plain": [
        "         video_id                                              title  \\\n",
-       "350   3hq2c9vdfls  Cal Football 2017: HC Justin Wilcox September ...   \n",
-       "1681  k8LF_FU2luY                            Track Testing Continued   \n",
-       "5022  c5RsAXsZvI8             7. Teach the First Behavior: Targeting   \n",
-       "2641  mShBE_wHAk8                       TARDIS - First Working Video   \n",
-       "1078  p7sooI96zPI  Big Love - Roman Grant Sings Big Rock Candy Mo...   \n",
+       "1611  -zCYX0esYlo  Everything You Need to Know About The Last Dab...   \n",
+       "307   IMG0u0_cKNc    Here's what happens when two hurricanes collide   \n",
+       "2768  ILDy6kYU-xQ  Are you a body with a mind or a mind with a bo...   \n",
+       "2548  TNhyrPaGFYQ                          FIX YOUR LIFE (YIAY #359)   \n",
+       "7619  CAQ2wWVlOuc  Jeff Bezos smashes bottle of champagne while p...   \n",
        "\n",
-       "                                        channel_title  category_id  \\\n",
-       "350                                         Cal Bears           17   \n",
-       "1681                                 Bollinger Motors            2   \n",
-       "5022  Clicker Learning Institute for Cats and Kittens           15   \n",
-       "2641                                  Adam Sifounakis           22   \n",
-       "1078                                         Geezus66           24   \n",
+       "       channel_title  category_id  \\\n",
+       "1611  First We Feast           26   \n",
+       "307     Tech Insider           28   \n",
+       "2768          TED-Ed           27   \n",
+       "2548      jacksfilms           23   \n",
+       "7619    Tech Insider           28   \n",
        "\n",
-       "                                                   tags  views  likes  \\\n",
-       "350   cal|berkeley|golden bears|bears|california gol...   1097      9   \n",
-       "1681  truck|track|bollinger motors|b1|electric car|e...   9711     35   \n",
-       "5022  cats|cat|kittens|kitten|pets|pet|animals|anima...   4962      8   \n",
-       "2641                                             [none]   1341      1   \n",
-       "1078  Roman|Grant|sings|singing|big|rock|candy|mount...  12396     39   \n",
+       "                                                   tags    views  likes  \\\n",
+       "1611  First we feast|fwf|firstwefeast|food|food porn...   662805  18403   \n",
+       "307   Tech Insider|TI|Tech|Science|Innovation|Digita...   151736   2153   \n",
+       "2768  TED|TED-Ed|TED Education|TED Ed|Maryam Alimard...   321735  14367   \n",
+       "2548    jacksfilms|yiay|fix|your|life|lives|live|advice  1595329  76458   \n",
+       "7619  Tech Insider|TI|Tech|Science|Innovation|Digita...    66230    661   \n",
        "\n",
        "      dislikes  comment_total                                  thumbnail_link  \\\n",
-       "350          0              7  https://i.ytimg.com/vi/3hq2c9vdfls/default.jpg   \n",
-       "1681         0              1  https://i.ytimg.com/vi/k8LF_FU2luY/default.jpg   \n",
-       "5022         0              1  https://i.ytimg.com/vi/c5RsAXsZvI8/default.jpg   \n",
-       "2641         0              3  https://i.ytimg.com/vi/mShBE_wHAk8/default.jpg   \n",
-       "1078         0              5  https://i.ytimg.com/vi/p7sooI96zPI/default.jpg   \n",
+       "1611       214           2205  https://i.ytimg.com/vi/-zCYX0esYlo/default.jpg   \n",
+       "307        102            444  https://i.ytimg.com/vi/IMG0u0_cKNc/default.jpg   \n",
+       "2768       322           1679  https://i.ytimg.com/vi/ILDy6kYU-xQ/default.jpg   \n",
+       "2548      1718          52400  https://i.ytimg.com/vi/TNhyrPaGFYQ/default.jpg   \n",
+       "7619       153            203  https://i.ytimg.com/vi/CAQ2wWVlOuc/default.jpg   \n",
        "\n",
        "      like_dislike_ratio  comment_sentiment_ratio  ratio_diff  \n",
-       "350                  1.0                      0.0         1.0  \n",
-       "1681                 1.0                      0.0         1.0  \n",
-       "5022                 1.0                      0.0         1.0  \n",
-       "2641                 1.0                      0.0         1.0  \n",
-       "1078                 1.0                      0.0         1.0  "
+       "1611            0.988505                 0.383333    0.605172  \n",
+       "307             0.954767                 0.265000    0.689767  \n",
+       "2768            0.978079                 0.315000    0.663079  \n",
+       "2548            0.978024                 0.155000    0.823024  \n",
+       "7619            0.812039                 0.288194    0.523845  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cv_combined['ratio_diff'] = (cv_combined['like_dislike_ratio'] - cv_combined['comment_sentiment_ratio']).abs()\n",
-    "cv_combined.sort_values('ratio_diff', ascending=False).head(5)"
+    "cv_combined.sort_values('ratio_diff', ascending=False).sample(5)"
    ]
   },
   {
